<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="powered_by">This card is powered by Udacity Google Android scholarship program</string>
    <string name="ptrblack">Batur Akcura(aka Peter Black)</string>
    <string name="address">Address:</string>
    <string name="address_1">34000 Istanbul Turkey</string>
    <string name="address_2">Lionhead st. KCK</string>
    <string name="tel_no">555 355 4847</string>
    <string name="website">Website:</string>
    <string name="web_url">www.peterblack.com</string>
    <string name="ptr_lg_img_desc">ptr_black_logo</string>
</resources>
